--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -3,7 +3,7 @@ apply plugin: "com.android.application"
 android {
     buildDir = "../../build-android"
     android.ndkVersion "22.1.7171670"
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     sourceSets {
         main {
@@ -15,8 +15,8 @@ android {
 
     defaultConfig {
         applicationId "com.hydra.noods"
-        minSdkVersion 16
-        targetSdkVersion 33
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode "git rev-list HEAD --count".execute().text.toInteger()
         versionName "0.1"
     }
@@ -41,4 +41,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.documentfile:documentfile:1.0.1'
+    implementation 'com.google.android.material:material:1.5.0'
 }
