--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -11,14 +11,14 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v4
     - name: Install MSYS2
       uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW64
         update: true
     - name: Install build tools, wxWidgets, and PortAudio
-      run: pacman -S mingw-w64-x86_64-{gcc,pkg-config,wxWidgets,portaudio,jbigkit} make --noconfirm
+      run: pacman -S mingw-w64-x86_64-{gcc,pkg-config,wxwidgets-msw,portaudio,jbigkit} make --noconfirm
       shell: msys2 {0}
     - name: Compile
       run: |
@@ -36,14 +36,17 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - name: Install wxWidgets and PortAudio
-      run: brew install wxmac portaudio
+    - name: Install Nix
+      uses: cachix/install-nix-action@v31
+      with:
+        nix_path: nixpkgs=channel:nixpkgs-25.05-darwin
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v4
     - name: Compile
-      run: |
-        make -j$(sysctl -n hw.logicalcpu)
-        ./mac-bundle.sh --dmg
+      shell: 'nix-shell -p wxGTK32 portaudio libGL pkg-config --run "bash {0}"'
+      run: make -j$(sysctl -n hw.logicalcpu)
+    - name: Bundle
+      run: ./mac-bundle.sh --dmg
     - name: Upload
       uses: actions/upload-artifact@v4
       with:
@@ -61,7 +64,7 @@ jobs:
         sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
         sudo flatpak install flathub org.freedesktop.Platform//21.08 org.freedesktop.Sdk//21.08 -y
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v4
     - name: Compile
       run: |
         git config --global protocol.file.allow always
@@ -77,7 +80,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v4
     - name: Compile
       run: |
         ./gradlew assembleRelease
@@ -98,7 +101,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v4
     - name: Compile
       run: make switch -j$(nproc)
     - name: Upload
@@ -113,7 +116,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v4
     - name: Compile
       run: make wiiu -j$(nproc)
     - name: Upload
@@ -128,7 +131,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v4
     - name: Compile
       run: make vita -j$(nproc)
     - name: Upload
